native launcher not finding cfg-file

XMLWordPrintable

    • x86
    • linux

      FULL PRODUCT VERSION :
      java version "1.8.0_60"
      Java(TM) SE Runtime Environment (build 1.8.0_60-b27)
      Java HotSpot(TM) 64-Bit Server VM (build 25.60-b23, mixed mode)

      ADDITIONAL OS VERSION INFORMATION :
      Linux jfx-dev 3.19.0-25-generic #26~14.04.1-Ubuntu SMP Fri Jul 24 21:16:20 UTC 2015 x86_64 x86_64 x86_64 GNU/Linux

      A DESCRIPTION OF THE PROBLEM :
      I'm the main contributor to the javafx-maven-plugin, and while debugging an issue which got reported, I discovered a bug within the native launcher of the linux-version.

      After searching through the source of the packaged libpackager.so, the discovery of the ".cfg"-file is wrong on linux-systems.

      When the application has a name with a DOT inside its name, e.g. "i-am.not.working", which is pretty okay for linux executables, the launcher searches for a filename "i-am.not.cfg", but the packager generates the filename "i-am.not.working.cfg".

      The only feedback of the launcher is, that no main class could be found, but that is misleading.

      To see the conclusion of my findings, please have a look at the issue, which can be found here:
      https://github.com/javafx-maven-plugin/javafx-maven-plugin/issues/124

      REGRESSION. Last worked in version 8u40

      STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
      * create a javafx-application with a dot inside it's application-name.
      * try to run that application via native launcher

      EXPECTED VERSUS ACTUAL BEHAVIOR :
      EXPECTED -
      Running the launcher, which uses the right cfg-file.
      ACTUAL -
      Launcher is not finding generated cfg-file, just saying something about main class not being found.

      REPRODUCIBILITY :
      This bug can be reproduced always.

      CUSTOMER SUBMITTED WORKAROUND :
      Renaming the generated cfg-file by removing the "second extension":

      assumed application-name: i-am.not.working

      not working:
      "i-am.not.working.cfg"

      working:
      "i-am.not.cfg"

        1. libpackager.so
          585 kB
        2. i-am.not.working.jar
          3 kB
        3. i-am.not.working.jnlp
          0.6 kB
        4. i-am.not.working.jar
          3 kB
        5. i-am.not.working.jnlp
          0.6 kB

            Assignee:
            Victor Drozdov (Inactive)
            Reporter:
            Webbug Group
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: