8137114: native launcher not finding cfg-file

Reviewed-by: kcr